# hawking

./: .agent_env.example  .gitignore  120B_GATE_F_CLOSEOUT_PRECHECK.json  120B_GATE_F_CLOSEOUT_PRECHECK.md  ADAPTIVE_TRANSFER_LADDER_PRECHECK.json  ADAPTIVE_TRANSFER_LADDER_PRECHECK.md  AGENTS.md  ARCHITECTURE.md  BASELINES.md  CHANGELOG.md  CLAUDE.md  CONDENSE_AUDIT.md  CONDENSE_DOCS_REVIEW.md  CONDENSE_LEDGER.md  CONTRIBUTING.md  Cargo.toml  DEEPSEEK_V4_BYTE_AUCTION.json  DEEPSEEK_V4_FLASH_CASCADE_DECISION.json  DEEPSEEK_V4_FLASH_CONTRACTION_PILOT.json  DEEPSEEK_V4_FLASH_CONTRACTION_VERDICT.json  DEEPSEEK_V4_FLASH_FETCH_RECEIPT.json  DEEPSEEK_V4_FLASH_MOE_PROBE_DECISION.json  DEEPSEEK_V4_FLASH_REHYDRATION_RECEIPT.json  DEEPSEEK_V4_FLASH_RELEASE_READINESS.json  DEEPSEEK_V4_FLASH_RELEASE_RECEIPT.json  DEEPSEEK_V4_FLASH_SOURCE_ADMISSION.json  DEEPSEEK_V4_RUNTIME_ACCOUNTING.json  DOCTOR_DIAGNOSIS_ONTOLOGY.json  DOCTOR_GENERATION_3_REGISTRY.json  DOCTOR_NEGATIVE_TRANSFER_ATLAS.json  DOCTOR_PRIME_PRECHECK.json  DOCTOR_TREATMENT_LIBRARY.json  FAILURES.md  GLM52_ADAPTER_TWIN.json  GLM52_ARCHITECTURE_CONTRACT.json  GLM52_CORPUS_INTEGRITY.json  GLM52_CORPUS_INTEGRITY.md  GLM52_CORRECTED_SCIENTIFIC_LAW.json  GLM52_CORRECTED_SCIENTIFIC_LAW.md  GLM52_FUNCTIONAL_CPU_PARITY.json  (+167 more)
app/src-tauri/: Cargo.toml  Entitlements.plist  README.md  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
crates/dismantle/: Cargo.toml
crates/dismantle-core/: Cargo.toml
crates/dismantle-core/examples/: print_shader_hash.rs
crates/dismantle-core/shaders/: attn.metal  common.metal  eagle4_head_fused.metal  gemv_f16_lmhead_kbatch.metal  gemv_q4_k_m_v2_kbatch.metal  matmul.metal  megakernel_qwen3b.metal  mha.metal  mla_decode_kernel_fc_kbatch.metal  moe.metal  moe_expert_pair_fused.metal  moe_union_expert.metal  moe_union_routing.metal  quant.metal  rwkv7.metal  sample.metal
crates/dismantle-core/src/: amx.rs  attn.rs  engine.rs  json_constrain.rs  kernel_bench.rs  lib.rs  mixed_quant_store.rs  moe.rs  profile.rs  q4k_fast.rs  quant.rs  quant_tier_map.rs  sidecar.rs  strand.rs  tokenizer.rs  tq.rs  tq_gpu.rs  vocab_prune.rs
crates/dismantle-core/tests/: add_rmsnorm_fused_q8_parity.rs  add_rmsnorm_fused_q8_scaled_parity.rs  amx_proj_parity.rs  bench_wedge_k.rs  chat_special_token_detok.rs  cpu_backend_parity.rs  cpu_backend_parity_deepseek.rs  e3_user_draft_gate_rule.rs  eagle4_capture_smoke.rs  eagle4_cpu_gpu_ab.rs  eagle4_decode_parity.rs  eagle4_parity.rs  eagle4_rmsnorm_residual_gate_parity.rs  eagle5_forward_parity.rs  eagle5_spec_parity.rs  eagle5_trained_head_load.rs  embed_rmsnorm_fused_parity.rs  ffn_tail_swiglu_add_rmsnorm_parity.rs  gemm_q4k_v4r_predec_parity.rs  gemma2_smoke.rs  gpu_address_microbench.rs  gpu_us_accuracy.rs  greedy_token_only_parity.rs  heap_residency_parity.rs  icb_overhead_microbench.rs  icb_production_scale.rs  integration_greedy_64.rs  kv_scatter_append_multiseq_parity.rs  llama32_smoke.rs  llama_cpp_oracle.rs  load_robustness.rs  mamba2_smoke.rs  megakernel_2layer_parity.rs  mha_decode_f16kv_parity.rs  mha_decode_flash_f16kv_parity.rs  mha_decode_flash_int4kv_parity.rs  mha_decode_flash_parity.rs  mha_decode_metal_parity.rs  mha_decode_perchannel_int4kv_parity.rs  mixed_quant_store_build.rs  (+130 more)
crates/dismantle-serve/: Cargo.toml
crates/dismantle-serve/src/: http.rs  lib.rs  system_kv_bank.rs
crates/dismantle-serve/tests/: dismantle_native_endpoint.rs  energy_gather_window.rs  greedy_lane_routing.rs  http_integration.rs  system_kv_bank.rs  system_kv_bank_wiring.rs  workload_pack_mapping.rs
crates/dismantle/src/: bench_kernel.rs  bench_server.rs  capture.rs  main.rs  spec_acceptance_measure.rs
crates/dismantle/tests/: spec_oracle_cli.rs
crates/hawking/: Cargo.toml  main.rs  process_joule.rs  spec_acceptance_measure.rs  tq_device_probe.rs  tq_spec_probe.rs
crates/hawking-bench/: Cargo.toml  lib.rs
crates/hawking-bench/src/: lib.rs
crates/hawking-context/: Cargo.toml  lib.rs
crates/hawking-context/src/: budget.rs  compiler.rs  embed.rs  fidelity.rs  kv.rs  lib.rs  manifest.rs  memory.rs  profiles.rs  recall.rs  sources.rs
crates/hawking-core/: Cargo.toml  build.rs
crates/hawking-core/reports/: w4a8_activation_dist.csv
crates/hawking-core/shaders/: common.metal  megakernel_qwen3b.metal  quant.metal  strand_bitslice.metal
crates/hawking-core/src/: attn.rs  backend.rs  backend_metal.rs  backend_router.rs  cache.rs  cache_prefill_disk.rs  cache_prefix_lint.rs  cache_sstate_disk.rs  engine.rs  error.rs  gguf.rs  json_constrain.rs  kernel_bench.rs  kernels.rs  kernels_megakernel.rs  lib.rs  metal.rs  metal_argbuf.rs  metal_decode_arena.rs  metal_dense_decode_arena.rs  metal_rwkv_decode_arena.rs  mixed_quant_store.rs  model.rs  model_arch_config.rs  model_deepseek_v2.rs  model_expert_cache.rs  model_gemma2.rs  model_llama.rs  model_mamba2.rs  model_mixtral.rs  model_olmoe.rs  model_phi3.rs  model_qwen_dense.rs  model_qwen_moe.rs  model_rwkv7.rs  model_weights.rs  (+36 more)
crates/hawking-eval/: Cargo.toml  lib.rs
crates/hawking-index/: Cargo.toml  lib.rs
crates/hawking-orch/: Cargo.toml  lib.rs
crates/hawking-research/: Cargo.toml  lib.rs
crates/hawking-seed/: Cargo.toml
crates/hawking-seed-b/: Cargo.toml
crates/hawking-seed-c/: Cargo.toml
crates/hawking-serve/: Cargo.toml  lib.rs
crates/hawking-speculate/: Cargo.toml
crates/hide-acp/: Cargo.toml
crates/hide-backend/: Cargo.toml  lib.rs
crates/hide-browser/: Cargo.toml
crates/hide-compat/: Cargo.toml
crates/hide-core/: Cargo.toml  lib.rs
crates/hide-extension-registry/: Cargo.toml
crates/hide-fleet/: Cargo.toml  lib.rs
crates/hide-kernel/: Cargo.toml  lib.rs
crates/hide-personalize/: Cargo.toml  lib.rs
crates/hide-program-runtime/: Cargo.toml
crates/hide-protocol/: Cargo.toml
eagle4/: .gitignore  ARCHITECTURE.md  LICENSE  README.md  bench.py  bench_results.md  capture.py  eagle4.py  medusa_head.py  pyproject.toml  q4_parity.py  rewrite_medusa.py  tau_eval.py  tau_results.json
eagle4/tests/: test_smoke.py
(+3431 files in other folders)
