[workspace]
resolver = "2"
members = [
    "crates/hawking",
    "crates/hawking-core",
    "crates/hawking-speculate",
    "crates/hawking-seed",
    "crates/hawking-serve",
    "crates/hawking-bench",
    "tools/q4k_fast",
    "tools/awq_bake",
    "tools/tq_bake",
]
# Absorbed STRAND quant track (from ~/Downloads/strand, tag `quant-handoff`). These are
# self-contained packages (concrete deps, no workspace inheritance) consumed by path
# dependency where wired — kept OUT of the default workspace build so `cargo build
# --workspace` and all golden hashes are unchanged. Build/test them standalone with
# `cargo test --manifest-path vendor/strand-quant/Cargo.toml`. strand-decode-kernel is
# strand's reference runtime + gate harness (not a hawking build dep; mirror source).
exclude = [
    "vendor/strand-quant",
    "vendor/strand-decode-kernel",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/joshuahickscorp/hawking"
authors = ["Joshua Hicks <joshuahicksboba@gmail.com>"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
rand = "0.8"
rand_pcg = "0.3"
sha2 = "0.10"
tokio-stream = "0.1"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"
ctrlc = "3"
ulid = "1"
blake3 = "1"
# HIDE scaffold completion (wave B+): shared deps pinned here so parallel crate
# agents reference them via `{ workspace = true }` without racing on this file.
# Crate-specific deps (tree-sitter grammars, etc.) live in each crate's manifest.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
async-trait = "0.1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
similar = "2"
petgraph = "0.6"
notify = "6"
ignore = "0.4"
globset = "0.4"
walkdir = "2"
aes-gcm = "0.10"
keyring = "3"
bytes = "1"
metal = "0.29"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-metal = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
