[package]
name = "dismantle-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Apple Silicon MoE inference engine — kernels, model, runtime"

[features]
# TQ (Trellis-Quant): dismantle's deterministic sub-4-bit weight-serving project,
# built on the absorbed strand-quant codec. Pulls in the `.tq` decode + activation-RHT
# CPU serving reference (src/tq.rs). OFF by default so the product build is byte-identical
# (no strand-quant dep, no metal 0.27). Enable with:
#   cargo test -p dismantle-core --features tq
tq = ["dep:strand-quant"]

[dependencies]
# strand-quant — the absorbed codec backing TQ: owner of the wire format (STR2) + the
# integer-deterministic Q12 decode. Optional + behind the `tq` feature.
strand-quant = { path = "../../vendor/strand-quant", optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
tokenizers = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }

[dev-dependencies]
tempfile = "3"
