[package]
name = "hawking-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Benchmark harness for hawking — produces every published number"

[lib]
path = "lib.rs"

[dependencies]
hawking-core = { path = "../hawking-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
