[package]
name = "hawking-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Context compiler, memory, and KV abstractions for HIDE"

[dependencies]
hide-core = { path = "../hide-core" }
hawking-index = { path = "../hawking-index" }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
ulid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
