[package]
name = "hawking-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Living codebase index API and daemon scaffold for HIDE"

[lib]
path = "lib.rs"

[dependencies]
hide-core = { path = "../hide-core" }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
petgraph = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

# Crate-specific: tree-sitter parse layer. ABI-compatible set, verified to build
# together (tree-sitter 0.25 / grammars exposing LANGUAGE + TAGS_QUERY).
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3"
