[package]
name = "hawking-orch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model role registry and inference orchestration scaffold for HIDE"

[lib]
path = "lib.rs"

[dependencies]
hide-core = { path = "../hide-core" }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true }
