[package]
name = "hawking-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenAI-compatible HTTP server for hawking-core"

[lib]
path = "lib.rs"

[features]
# Forward the runtime `tq` feature down to hawking-core so a `hawking serve`
# built with `--features tq` can serve a `.tq` sidecar (HAWKING_QWEN_TQ). OFF by
# default: the default product build stays byte-identical (no strand-quant dep,
# no metal 0.27) and the existing gates stay green.
tq = ["hawking-core/tq"]

[dependencies]
hawking-core = { path = "../hawking-core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
# All three are already in the workspace lockfile via axum's tree, so this
# exposes them to the integration test without pulling new crates.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
