[package]
name = "hawking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "hawking CLI for Apple Silicon LLM inference"

[[bin]]
name = "hawking"
path = "main.rs"

[[bin]]
name = "hawking-spec-acceptance-measure"
path = "spec_acceptance_measure.rs"

[[bin]]
name = "hawking-tq-device-probe"
path = "tq_device_probe.rs"
required-features = ["tq"]

[[bin]]
name = "hawking-tq-spec-probe"
path = "tq_spec_probe.rs"
required-features = ["tq"]

[features]
# Forward the runtime `tq` feature down through hawking-serve to hawking-core so
# the `hawking serve` binary, built with `--features tq`, serves a `.tq` sidecar
# (HAWKING_QWEN_TQ). OFF by default: the default product build stays
# byte-identical and existing gates stay green. The RuntimeSupervisor builds /
# runs the runtime with this feature when a `.tq` sidecar is configured.
tq = ["hawking-serve/tq", "hawking-core/tq"]

[dependencies]
hawking-core = { path = "../hawking-core" }
hawking-serve = { path = "../hawking-serve" }
hawking-bench = { path = "../hawking-bench" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
