[package]
name = "hide-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Config-compatibility readers so a repo configured for another agent migrates to HIDE (model-free pure parsing plus precedence)"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
